# MutantAutoMate

./: .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  app.py  combined_single.py  docker-compose.yml  getPDB.py  getPDBforXLSX.py  getPDF.py  package.json  pymol.sh  pyproject.toml  requirements.txt  run-with-docker.sh  setup.py  snapshot.sh  try.pml
src/mutantautomate/: app.py  app2.py  combined_single.py  final.py  getPDB.py  getPDF.py  grantham_output.txt  mutate_residue.py  pdb_helpers.py  process.py  pymut.py  res.py  sasa.py  snapshot.sh  terminal_check.py  test.py  try1.pml  try1_zoomed.pml
src/mutantautomate/static/js/: app-old-v1.js  app.js
src/mutantautomate/templates/: error.html  index.html  index2.html  login.html  results.html
