[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Akshada Pradhan", email = "asameerpradhan@flatironinstitute.org"},
]
name = "mutantautomate"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "pypdb",
    "bioservices",
    "reportlab",
    "mdtraj",
    "seaborn",
    "matplotlib",
    "fpdf",
    "Bio",
]
