[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Akshada Pradhan", email = "asameerpradhan@flatironinstitute.org"},
]
name = "mutantautomate"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "pypdb",
    "bioservices",
    "reportlab",
    "mdtraj",
    "seaborn",
    "matplotlib",
    "fpdf",
    "Bio",
    "chardet",
]

[tool.poetry.dependencies]
numpy = "^1.20.0"
pandas = "^1.3.0"
requests = "^2.26.0"
# Add other dependencies here
flask = "^2.0.1"

